# qyotodevelop

./: .gitignore  COPYING  Makefile.am  Makefile.include  QyotoDevelop.sln  README  autogen.sh  configure.ac
QyotoDevelop/: AssemblyInfo.cs  CSharpQyotoProjectBinding.cs  Commands.cs  EventyList.cs  FormNodeBuilder.cs  FormsFolder.cs  FormsFolderNodeBuilder.cs  Makefile.am  ProjectFolderNodeBuilder.cs  ProjectNodeBuilder.cs  QyotoCodeFileDescriptionTemplate.cs  QyotoCodeGenerator.cs  QyotoCommandHandler.cs  QyotoDesignInfo.cs  QyotoDevelop.csproj  QyotoForm.cs  QyotoFormFileDescriptionTemplate.cs  QyotoFormNodeBuilder.cs  QyotoFormPropertyDescriptor.cs  QyotoFormPropertyProvider.cs  QyotoFormsFolderNodeBuilder.cs  QyotoProject.cs  QyotoProjectFeatures.cs  QyotoProjectServiceExtension.cs  QyotoStartupCommand.cs  ReferenceManager.cs  Util.cs  qyotodevelop.pc.in
QyotoDevelop/Resources/: Dialog.xft.xml  EmptyCSharpQyotoProject.xpt.xml  MainWindow.xft.xml  QyotoDevelop.addin.xml  Widget.xft.xml
debian/: changelog  control  rules
